--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       
   <div class="hero" />
       
-  <p> Email: andrewbiessener@gmail.com 
+ <h1> Email: andrewbiessener@gmail.com 
     <br> <div class="phoneaddress" />
     Address: 572 Sutherland Drive, Woodbury, Minnesota 55129
-  </p>
+      </h1>
 <p> Competitive, logical and imaginative individual with a constant desire to improve. Hailing from environments that demand you improvise and adapt. </p>
   Professional Experience
  
