--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
     Address: 572 Sutherland Drive, Woodbury, Minnesota 55129
       </h1>
 <p> Competitive, logical and imaginative individual with a constant desire to improve. Hailing from environments that demand you improvise and adapt. </p>
-  Professional Experience
+  <h1> Professional Experience
  
-  Twitch Streams
-  <ul> <div class="pro" />
+  Twitch Streamer/Partner
+      </h1>
+  <ul> 
    <li>Self-managed live broadcasts</li>
        <li>Found numerous creative/unique ways to entertain, interact and attract thousands of concurrent viewers/chatters
 day after day. </li>
@@ -42,7 +43,8 @@ day after day. </li>
  
   </ul>
  DotA2
-  <ul> <div class="pro" />
+      <div class="pro" />
+  <ul> 
     <li>Performed better than millions of other players on an individual level</li>
    <li>Constantly adapted and innovated within both the most complex game and most frequently changing game in the 
 esports industry</li>
@@ -52,16 +54,17 @@ discussion</li>
    <li>Execercised both a high level of humility and a high level of confidence at appropriate times as both were very necessary in that world</li>
    <li></li>
   </ul>
+      <div class="pro" />
   Hearthstone
-  <ul> <div class="pro" />
+  <ul>
    <li>Used logic and math in order to both create and pilot the best decks within the game</li>
    <li>Had to be very resiliant to repetition repetition repetition repetition repetition repetition</li>
    <li></li>
    
   </ul>
-  
+  <div class="pro" />
   Accomplishments 
-  <ul> <div class="pro" />
+  <ul> 
     <li>Won various tournaments competing against the best players in the world in both DotA & Hearthstone</li>
     <li>Hit most concurrent viewers amongst thousands of other live broadcasters on twitch.tv (20,000+ concurrent viewers) multiple times while I was still active in that world</li>
    <li>Over 100,000 twitch followers</li>
