--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     Address: 572 Sutherland Drive, Woodbury, Minnesota 55129
       </h1>
 <p> Competitive, logical and imaginative individual with a constant desire to improve. Hailing from environments that demand you improvise and adapt. </p>
-  <h1> Professional Experience
- 
+  <h2> 
   Twitch Streamer/Partner
-      </h1>
+      </h2>
   <ul> 
    <li>Self-managed live broadcasts</li>
        <li>Found numerous creative/unique ways to entertain, interact and attract thousands of concurrent viewers/chatters
@@ -29,10 +28,11 @@ day after day. </li>
    <li>Negotiated and executed advertisement contracts with various sponsors</li>
    <li></li>
  
-  </ul>
+ 
+  <h2>
  DotA2
       <div class="pro" />
-  <ul> 
+  </h2> 
     <li>Performed better than millions of other players on an individual level</li>
    <li>Constantly adapted and innovated within both the most complex game and most frequently changing game in the 
 esports industry</li>
@@ -42,8 +42,10 @@ discussion</li>
    <li>Execercised both a high level of humility and a high level of confidence at appropriate times as both were very necessary in that world</li>
    <li></li>
   </ul>
+  <h2>
       <div class="pro" />
   Hearthstone
+  </h2>
   <ul>
    <li>Used logic and math in order to both create and pilot the best decks within the game</li>
    <li>Had to be very resiliant to repetition repetition repetition repetition repetition repetition</li>
@@ -51,7 +53,7 @@ discussion</li>
    
   </ul>
   <div class="pro" />
-  Accomplishments 
+  <h2>  Accomplishments </h2>
   <ul> 
     <li>Won various tournaments competing against the best players in the world in both DotA & Hearthstone</li>
     <li>Hit most concurrent viewers amongst thousands of other live broadcasters on twitch.tv (20,000+ concurrent viewers) multiple times while I was still active in that world</li>
