--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
 </head>
 <body>
- 
+
   <div class="hero" />
       
  <h1> Email: andrewbiessener@gmail.com 
@@ -56,6 +56,8 @@ discussion</li>
    <li>Over 100,000 twitch followers</li>
    <li></li>
   </ul>
+  
+  <a href="https://www.youtube.com/watch?v=OQfjIw3mivc">Link</a>
   
   
   <ul id="menu"> 
