--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <div class="hero" />
       
- <h1> Email: andrewbiessener@gmail.com 
+ <h1> Email: AndrewBiessener@gmail.com 
     <br> <div class="phoneaddress" />
     Address: 572 Sutherland Drive, Woodbury, Minnesota 55129
       </h1>
@@ -57,7 +57,7 @@ discussion</li>
    <li></li>
   </ul>
   
-  <a href="https://www.youtube.com/watch?v=OQfjIw3mivc">Link</a>
+  <a href="https://www.youtube.com/watch?v=OQfjIw3mivc">A youtube video showing me using recording technology whilst subtley and simotaneously showing I know more html wow</a>
   
   
   <ul id="menu"> 
