--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <br> <div class="phoneaddress" />
     Address: 572 Sutherland Drive, Woodbury, Minnesota 55129
       </h1>
-<p> Competitive, logical and imaginative individual with a constant desire to improve. Hailing from environments that demand you improvise and adapt. </p>
+<p> <h3> Competitive, logical and imaginative individual with a constant desire to improve. Hailing from environments that demand you improvise and adapt. </p>
+  </h3>
   <h2> 
   Twitch Streamer/Partner
       </h2>
