--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 day after day. </li>
    <li>Negotiated and executed advertisement contracts with various sponsors</li>
    <li></li>
- 
+ <div id="wrapper">    
+    <div id="yourdiv">Your text321</div>
+</div>
  
   <h2>
  DotA2
