--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   <h2> 
   Twitch Streamer/Partner
       </h2>
-  <ul> 
+  <ul> <div class="container">
+    <pre>
+        int i = 0;
+        i = i + 80000000000;
+    </pre>
+</div>
    <li>Self-managed live broadcasts</li>
        <li>Found numerous creative/unique ways to entertain, interact and attract thousands of concurrent viewers/chatters
 day after day. </li>
@@ -51,7 +56,7 @@ discussion</li>
   <h2>  Accomplishments </h2>
   <ul> 
     <li>Won various tournaments competing against the best players in the world in both DotA & Hearthstone</li>
-    <li>Hit most concurrent viewers amongst thousands of other live broadcasters on twitch.tv (20,000+ concurrent viewers) multiple times while I was still active in that world</li>
+    <li>Hit most concurrent viewers amongst thousands of other live broadcasters on twitch.tv (20,000+ concurrent viewers) multiple times</li>
    <li>Over 100,000 twitch followers</li>
    <li></li>
   </ul>
