--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <div class="hero" />
       
-<p> <h3> Competitive, logical and imaginative individual with a constant desire to improve. Hailing from environments that demand you improvise and adapt. </p>
+<p> <h3> Competitive, logical and imaginative individual with a constant desire to improve whilst going above and beyond. Hailing from environments that demand you improvise and adapt. </p>
   </h3>
   <h2> 
   Twitch Streamer/Partner
