--- a/index.html
+++ b/index.html
@@ -21,10 +21,21 @@
     </pre>
 </div>
    <li>Self-managed live broadcasts</li>
-       <li>Found numerous creative/unique ways to entertain, interact and attract thousands of concurrent viewers/chatters
+       <li> <div style="text-align: center;">
+    <div style="display: inline-block; text-align: left;">
+        Centered<br />
+        Content<br />
+        That<br />
+        Is<br />
+        Left<br />
+        Aligned
+    </div>
+</div> Found numerous creative/unique ways to entertain, interact and attract thousands of concurrent viewers/chatters
 day after day. </li>
    <li>Negotiated and executed advertisement contracts with various sponsors</li>
    <li></li>
+    
+   
  <div id="wrapper">    
     <div id="yourdiv">Your text321</div>
 </div>
