--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
         i = i + 80000000000;
     </pre>
 </div>
-   <li>Self-managed live broadcasts</li>
+   <li>Self-managed live broadcasts <div style="text-align: center;">
+    <div style="display: inline-block; text-align: left;">
+        Centered<br />
+        Content<br />
+        That<br />
+        Is<br />
+        Left<br />
+        Aligned
+    </div>
+</div></li>
        <li> <div style="text-align: center;">
     <div style="display: inline-block; text-align: left;">
         Centered<br />
@@ -32,7 +41,16 @@
     </div>
 </div> Found numerous creative/unique ways to entertain, interact and attract thousands of concurrent viewers/chatters
 day after day. </li>
-   <li>Negotiated and executed advertisement contracts with various sponsors</li>
+   <li><div style="text-align: center;">
+    <div style="display: inline-block; text-align: left;">
+        Centered<br />
+        Content<br />
+        That<br />
+        Is<br />
+        Left<br />
+        Aligned
+    </div>
+</div>Negotiated and executed advertisement contracts with various sponsors</li>
    <li></li>
     
    
