--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@
         i = i + 80000000000;
     </pre>
 </div>
-   <li>Self-managed live broadcasts <div style="text-align: center;">
+   <li> <div style="text-align: center;">
     <div style="display: inline-block; text-align: left;">
-        Centered<br />
-        Content<br />
-        That<br />
-        Is<br />
-        Left<br />
-        Aligned
+        Self-managed live broadcasts<br />
+      
     </div>
 </div></li>
        <li> <div style="text-align: center;">
