--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
   Twitch Streamer/Partner
       </h2>
   <ul> <div class="container">
-    <pre>
-        int i = 0;
-        i = i + 80000000000;
-    </pre>
+ 
 </div>
    <li> <div style="text-align: center;">
     <div style="display: inline-block; text-align: left;">
@@ -29,11 +26,9 @@
        <li> <div style="text-align: center;">
     <div style="display: inline-block; text-align: left;">
         Centered<br />
-        Content<br />
-        That<br />
-        Is<br />
-        Left<br />
-        Aligned
+        Found numerous creative/unique ways to entertain, interact and attract thousands of concurrent viewers/chatters
+day after day.<br />
+       
     </div>
 </div> Found numerous creative/unique ways to entertain, interact and attract thousands of concurrent viewers/chatters
 day after day. </li>
