--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div style="display: inline-block; text-align: left;">
         <br />
         Self-managed live broadcasts<br />
+      <br />
       
     </div>
 </div></li>
@@ -42,11 +43,7 @@ day after day.<br />
 Negotiated and executed advertisement contracts with various sponsors</li>
   <br />
    <li></li>
-    
    
- <div id="wrapper">    
-    <div id="yourdiv">Your text321</div>
-</div>
  
   <h2>
  DotA2
@@ -70,17 +67,23 @@ discussion</li><br />
   Hearthstone
   </h2>
   <ul>
-   <li>Used logic and math in order to both create and pilot the best decks within the game</li>
-   <li>Had to be very resiliant to repetition repetition repetition repetition repetition repetition</li>
+    <div style="text-align: center;">
+    <div style="display: inline-block; text-align: left;">
+        <br />
+   <li>Used logic and math in order to both create and pilot the best decks within the game</li> <br />
+   <li>Had to be very resiliant to repetition repetition repetition repetition repetition repetition</li> <br />
    <li></li>
    
   </ul>
   <div class="pro" />
   <h2>  Accomplishments </h2>
   <ul> 
-    <li>Won various tournaments competing against the best players in the world in both DotA & Hearthstone</li>
-    <li>Hit most concurrent viewers amongst thousands of other live broadcasters on twitch.tv (20,000+ concurrent viewers) multiple times</li>
-   <li>Over 100,000 twitch followers</li>
+    <div style="text-align: center;">
+    <div style="display: inline-block; text-align: left;">
+        <br />
+    <li>Won various tournaments competing against the best players in the world in both DotA & Hearthstone</li> <br />
+    <li>Hit most concurrent viewers amongst thousands of other live broadcasters on twitch.tv (20,000+ concurrent viewers) multiple times</li><br />
+   <li>Over 100,000 twitch followers</li><br />
    <li></li>
   </ul>
   
