--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        <li> <div style="text-align: center;">
     <div style="display: inline-block; text-align: left;">
         <br />
-        Found numerous creative/unique ways to entertain, interact and attract thousands of concurrent viewers/chatters
+        Found numerous creative andunique ways to entertain, interact with and attract thousands of concurrent viewers
 day after day.<br />
        
     </div>
