--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
       
 <p> <h3> Competitive, logical and imaginative individual with a constant desire to improve whilst going above and beyond. Hailing from environments that demand you improvise and adapt. </p>
   </h3>
-  <h2> 
-  Twitch Streamer/Partner
+ 
+                                                               <section>
+  <h2>
+   Twitch Streamer/Partner
       </h2>
   <ul> 
    <li> <div style="text-align: center;">
@@ -41,9 +43,10 @@ day after day.<br />
 Negotiated and executed advertisement contracts with various sponsors</li>
   <br />
    <li></li>
-   
+                                                                 </section>
  
-  <h2>
+  <section>
+  <h2>  
  DotA2
       <div class="pro" />
   </h2> 
@@ -62,6 +65,8 @@ discussion</li><br />
   </ul>
   <h2>
       <div class="pro" />
+    </section>
+    <section>
   Hearthstone
   </h2>
   <ul>
@@ -71,7 +76,9 @@ discussion</li><br />
    <li>Used logic and math in order to both create and pilot the best decks within the game</li> <br />
    <li>Had to be very resiliant to repetition repetition repetition repetition repetition repetition</li> <br />
    <li></li>
-   
+      </section>
+      
+      <section>
   </ul>
   <div class="pro" />
   <h2>  Accomplishments </h2>
@@ -84,6 +91,7 @@ discussion</li><br />
    <li>Over 100,000 twitch followers</li><br />
    <li></li>
   </ul>
+      </section>
   
   <a href="https://www.youtube.com/watch?v=OQfjIw3mivc">A youtube video showing me using recording technology whilst subtley and simotaneously showing I know more html wow</a>
   
