--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
    <li> <div style="text-align: center;">
     <div style="display: inline-block; text-align: left;">
         <br />
-        Self-managed live broadcasts<br />
+        Self-managed live broadcasts to twitch.tv<br />
       <br />
-      
+      </li>
     </div>
 </div></li>
        <li> <div style="text-align: center;">
@@ -42,7 +42,7 @@ day after day.<br />
         <br />
 Negotiated and executed advertisement contracts with various sponsors</li>
   <br />
-   <li></li>
+  
                                                                  </section>
  
   <section>
@@ -61,7 +61,7 @@ esports industry</li><br />
 discussion</li><br />
    <li>Execercised both a high level of humility and a high level of confidence at appropriate times as both were very necessary in that world</li>
   <br />
-      <li></li>
+
   </ul>
   <h2>
       <div class="pro" />
@@ -89,7 +89,7 @@ discussion</li><br />
     <li>Won various tournaments competing against the best players in the world in both DotA & Hearthstone</li> <br />
     <li>Hit most concurrent viewers amongst thousands of other live broadcasters on twitch.tv (20,000+ concurrent viewers) multiple times</li><br />
    <li>Over 100,000 twitch followers</li><br />
-   <li></li>
+  
   </ul>
       </section>
   
