--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ discussion</li><br />
       <div class="pro" />
     </section>
     <section>
-  Hearthstone
+  <h2> Hearthstone
   </h2>
   <ul>
     <div style="text-align: center;">
