--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@ discussion</li><br />
     
     <section>
       <h2> A little extra </h2>
-      I'm currently not in a position where I can fail, I would do everything in my power to succeed and come out of Prime with the necessary tools stored into my brain in order to succeed in the professional coding world. I'm very hopeful to get an interview and to show through it that i'm ready for a program like Prime.
-      <p> 
+      <p>
+      I'm currently not in a position where I can fail if I spend time doing it, I would do everything in my power to succeed and come out of Prime with the necessary tools stored into my brain in order to succeed in the professional coding world. I'm very hopeful to get an interview and to show through it that i'm ready for a program like Prime.
+      </p>
+    </section>
   
   <a href="https://www.youtube.com/watch?v=OQfjIw3mivc">A youtube video showing me using recording technology whilst subtley and simotaneously showing I know more html wow</a>
   
