--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ discussion</li><br />
   
     
   <ul id="menu"> 
-
+<div class="links" />
     <li><a href="twitch.tv/tidesoftime"><img src="https://cdn1.iconfinder.com/data/icons/micon-social-pack/512/twitch-512.png" alt=Twitch" width="64" height="64"
 ></a>
     <li><a href="twitter.com/tidesoftime "><img src="https://i.ytimg.com/vi/zrmdYzKpcWg/hqdefault.jpg" alt="Twitter" width="64" height="64"
