--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ discussion</li><br />
     <section>
       <h2> A Little Extra </h2>
       <p>
-      I'm currently not in a position where I can fail if I spend time doing it, I would do everything in my power to succeed and come out of Prime with the necessary tools stored into my brain in order to succeed in the professional coding world. I'm very hopeful to get an interview and to show through it that i'm ready for a program like Prime.
+      I'm currently not in a position where I can fail if I spend time doing it, I would do everything in my power to succeed and come out of Prime with the necessary tools stored into my brain in order to succeed in the professional coding world. I'm very hopeful to get an interview and to show through the interview that i'm ready for a program like Prime.
       </p>
     </section>
   
