--- a/index.html
+++ b/index.html
@@ -17,22 +17,16 @@
    Twitch Streamer/Partner
       </h2>
   <ul> 
-   <li> <div style="text-align: center;">
-    <div style="display: inline-block; text-align: left;">
-        <br />
-        Self-managed live broadcasts to twitch.tv<br />
-      <br />
+   <li> 
+        Self-managed live broadcasts to twitch.tv
+ 
       </li>
-    </div>
-</div></li>
-       <li> <div style="text-align: center;">
-    <div style="display: inline-block; text-align: left;">
-        <br />
+  
+       <li> <
         Found numerous creative and unique ways to entertain, interact with and attract thousands of concurrent viewers
 day after day.<br />
        
-    </div>
-</div> </li>
+    </li>
     
    <li>
     </div>
