--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@ discussion</li><br />
     
   <ul id="menu"> 
 <div class="links" />
-    <li><a href="twitch.tv/tidesoftime"><img src="https://cdn1.iconfinder.com/data/icons/micon-social-pack/512/twitch-512.png"> alt=Twitch" width="74" height="64"
+    <li><a href="https://www.twitch.tv/tidesoftime"><img src="https://cdn1.iconfinder.com/data/icons/micon-social-pack/512/twitch-512.png" alt=Twitch" width="74" height="64"
 ></a>
-    <li><a href="twitter.com/tidesoftime "><img src="https://i.ytimg.com/vi/zrmdYzKpcWg/hqdefault.jpg" alt="Twitter" width="80" height="64"
+    <li><a href="https://www.twitter.com/tidesoftime "><img src="https://i.ytimg.com/vi/zrmdYzKpcWg/hqdefault.jpg" alt="Twitter" width="80" height="64"
  ></a> </li> 
-    <li><a href="youtube.com"><img src="https://siliconangle.com/files/2013/11/YouTube-300x300.jpg" alt="YouTube" width="74" height="64"
+    <li><a href="https://www.youtube.com"><img src="https://siliconangle.com/files/2013/11/YouTube-300x300.jpg" alt="YouTube" width="74" height="64"
 ></a> </li>
-    <li><a href="facebook.com/drewbiessener "><img src="https://www.edgehill.ac.uk/thelabel/files/2016/04/facebook-flat-vector-logo.png" alt="Facebook" width="74" height="64"
+    <li><a href="https://www.facebook.com/drewbiessener "><img src="https://www.edgehill.ac.uk/thelabel/files/2016/04/facebook-flat-vector-logo.png" alt="Facebook" width="74" height="64"
  ></a> </li>
       </ul>
   
