--- a/index.html
+++ b/index.html
@@ -17,25 +17,11 @@
    Twitch Streamer/Partner
       </h2>
   <ul> 
-   <li> 
-        Self-managed live broadcasts to twitch.tv
- 
-      </li>
+   <li>  Self-managed live broadcasts to twitch.tv</li>
+    <li>  Found numerous creative and unique ways to entertain, interact with and attract thousands of concurrent viewers
+day after day. </li>
+   <li>Negotiated and executed advertisement contracts with various sponsors</li>
   
-       <li> <
-        Found numerous creative and unique ways to entertain, interact with and attract thousands of concurrent viewers
-day after day.<br />
-       
-    </li>
-    
-   <li>
-    </div>
-</div>
-<div style="text-align: center;">
-    <div style="display: inline-block; text-align: left;">
-        <br />
-Negotiated and executed advertisement contracts with various sponsors</li>
-  <br />
   
                                                                  </section>
  
