--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
    Twitch Streamer/Partner
       </h2>
   <ul> 
-   <li>  Self-managed live broadcasts to twitch.tv</li>
+    <div style="text-align: center;">
+    <div style="display: inline-block; text-align: left;">
+        <br />
+   <li>  Self-managed live broadcasts to twitch.tv</li><br />
     <li>  Found numerous creative and unique ways to entertain, interact with and attract thousands of concurrent viewers
-day after day. </li>
-   <li>Negotiated and executed advertisement contracts with various sponsors</li>
+day after day. </li><br />
+   <li>Negotiated and executed advertisement contracts with various sponsors</li><br />
   
   
                                                                  </section>
