--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ discussion</li><br />
       </p>
     </section>
   
-    
+    <section>
     
   <a href="https://www.youtube.com/watch?v=OQfjIw3mivc">A youtube video showing me using recording technology whilst subtley and simotaneously showing I know more html wow</a>
-  
+    </section>
    <h3> Email: AndrewBiessener@gmail.com 
     <br> <div class="phoneaddress" />
     Address: 572 Sutherland Drive, Woodbury, Minnesota 55129
