--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
   </h3>
  
                                                                <section>
-  <h2>
-   Twitch Streamer/Partner
-      </h2>
+  <h2>Twitch Streamer/Partner</h2>
   <ul> 
     <div style="text-align: center;">
-    <div style="display: inline-block; text-align: left;">
-        <br />
+    <div style="display: inline-block; text-align: left;"><br />
    <li>  Self-managed live broadcasts to twitch.tv</li><br />
-    <li>  Found numerous creative and unique ways to entertain, interact with and attract thousands of concurrent viewers
+      <li>  Found numerous creative and unique ways to entertain, interact with and attract thousands of concurrent viewers
 day after day. </li><br />
    <li>Negotiated and executed advertisement contracts with various sponsors</li><br />
   
