--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@ discussion</li><br />
     </section>
   
     <section>
-      <h2><a href="https://www.youtube.com/watch?v=5Pe7m7_k3rA&feature=youtu.be"> I believe Github doesn't support embedded videos so here's a link and the below square is where it would go.>
+      <h3><a href="https://www.youtube.com/watch?v=5Pe7m7_k3rA&feature=youtu.be"> I believe Github doesn't support embedded videos so here's a link and the below square is where it would go.</h3>
     <iframe width="420" height="315"
 src="https://www.youtube.com/watch?v=5Pe7m7_k3rA&feature=youtu.be">
 </iframe>
+        
     </section>
    <h3> Email: AndrewBiessener@gmail.com 
     <br> <div class="phoneaddress" />
