--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@ discussion</li><br />
   
     <section>
       <h3><a href="https://www.youtube.com/watch?v=5Pe7m7_k3rA&feature=youtu.be"> I believe Github doesn't support embedded videos so here's a link and the below square is where it would go.</h3>
-    <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=5Pe7m7_k3rA&feature=youtu.be">
+    <iframe width="420" height="315">
 </iframe>
         
     </section>
