--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ discussion</li><br />
     <section>
       <h2> A Little Extra </h2>
       <p>
-      I'm currently not in a position where I can fail if I spend time doing it, I would do everything in my power to succeed and come out of Prime with the necessary tools stored into my brain in order to succeed in the professional coding world. I'm very hopeful to get an interview and to show through the interview that i'm ready for a program like Prime. I understand that the entertainment industry doesn't necessarily translate into the coding industry. But it is no coincidence that I chose to pursue this world. I have a very logic-oriented brain, am very familiar with the need to adapt & am highly creative and imaginative. Even the little coding i'm doing for this application just feels right, I don't want to get my hopes up but i'm extremely excited thinking about doing this professionally. 
+      I would do everything in my power to succeed and come out of Prime with the necessary tools stored into my brain in order to succeed in the professional coding world. I'm very hopeful to get an interview and to show through the interview that i'm ready for a program like Prime. I understand that the entertainment industry doesn't necessarily translate into the coding industry. But it is no coincidence that I chose to pursue this world. I have a very logic-oriented brain, am very familiar with the need to adapt & am highly creative and imaginative. Even the little coding i'm doing for this application just feels right, I don't want to get my hopes up but i'm extremely excited thinking about doing this professionally. 
       
       </p>
     </section>
