--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@ discussion</li><br />
 </iframe>
     </section>
       
-   <h3> Email: andrewbiessener&#64gmail&#46com
-
-  
+   <h3> Email: AndrewBiessener&#64gmail&#46com
      <br />
     Address: 572 Sutherland Drive, Woodbury, Minnesota 55129
       </h3>
