--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ discussion</li><br />
     </section>
   
     <section>
-      <h3><a href="https://www.youtube.com/watch?v=5Pe7m7_k3rA&feature=youtu.be"> I believe Github doesn't support embedded videos so here's a link and the below square is where it would go.</h3>
+      <h3><li><a href="https://www.youtube.com/watch?v=5Pe7m7_k3rA&feature=youtu.be"> I believe Github doesn't support embedded videos so here's a link and the below square is where it would go.</h3>
     <iframe width="420" height="315">
-</iframe>
+        </iframe></li>
     </section>
       
    <h3> Email: AndrewBiessener&#64gmail&#46com
