--- a/index.html
+++ b/index.html
@@ -83,15 +83,18 @@ discussion</li><br />
     </section>
   
     <section>
+ 
       <h3><li><a href="https://www.youtube.com/watch?v=5Pe7m7_k3rA&feature=youtu.be"> I believe Github doesn't support embedded videos so here's a link and the below square is where it would go.</h3>
     <iframe width="420" height="315">
         </iframe></li>
     </section>
       
-   <h3> Email: AndrewBiessener&#64gmail&#46com
+   <h3> <a href="Email: AndrewBiessener&#64gmail&#46com" style="text-decoration:none;"> 
+
      <br />
     Address: 572 Sutherland Drive, Woodbury, Minnesota 55129
-      </h3>
+     </a>
+     </h3>
   
     
   <ul id="menu"> 
