--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ discussion</li><br />
         </iframe></li>
     </section>
       
-   <h3> <a href="Email: AndrewBiessener&#64gmail&#46com" style="text-decoration:none;"> 
-
+   <h3> <a href=" " style="text-decoration:none;"> 
+    Email: AndrewBiessener&#64gmail&#46com
      <br />
     Address: 572 Sutherland Drive, Woodbury, Minnesota 55129
      </a>
