--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@ discussion</li><br />
     Email: AndrewBiessener&#64gmail&#46com
      <br />
     Address: 572 Sutherland Drive, Woodbury, Minnesota 55129
+      <div style="color: #000000;">
      </a>
+     
      </h3>
   
     
